# oeo-reports

./: .gitignore  .pre-commit-config.yaml  README.md  _publish.yml  _quarto.yml  index.html  index.qmd  index.quarto_ipynb  pyproject.toml
data/: utopia.sqlite
docs/: about.html  index.html  robots.txt  search.json  sitemap.xml
docs/reports/US_9R_8D/: data_analysis.html  index.html  overview.html  tables.html
docs/reports/utopia/: data_analysis.html  index.html  overview.html  tables.html
reports/US_9R_8D/: BuildingsSector.qmd  ElectricSector.qmd  ElectricSector.quarto_ipynb  index.html  index.qmd  index.quarto_ipynb  overview.qmd  overview.quarto_ipynb  tables.qmd  tables.quarto_ipynb
reports/utopia/: index.qmd  index.quarto_ipynb  tables.qmd  tables.quarto_ipynb
