[project]
name = "oeo-reports"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "graphviz>=0.21",
    "ipywidgets>=8.1.7",
    "itables>=2.4.2",
    "marimo>=0.14.0",
    "matplotlib>=3.10.3",
    "pandas>=2.3.0",
    "papermill>=2.6.0",
    "polars[pyarrow]>=1.31.0",
    "quarto>=0.1.0",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.41",
    "sqlglot>=26.29.0",
    "tabulate>=0.9.0",
]
