[project]
name = "oeo-reports"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "graphviz>=0.21",
    "ipywidgets>=8.1.7",
    "itables>=2.4.2",
    "marimo>=0.14.0",
    "matplotlib>=3.10.3",
    "pandas>=2.3.0",
    "papermill>=2.6.0",
    "plotly>=6.1.2",
    "polars[pyarrow]>=1.31.0",
    "quarto>=0.1.0",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.41",
    "sqlglot>=26.29.0",
    "tabulate>=0.9.0",
]

[tool.ruff]

lint.per-file-ignores."*doccmd_*.py" = [
   # Allow hardcoded secrets in documentation.
   "S105",
]

[dependency-groups]
dev = [
    "doccmd>=2025.4.8",
    "pre-commit>=4.2.0",
]
