[project]
name = "oeo-reports"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "graphviz>=0.21",
    "itables>=2.4.2",
    "jupyter-cache>=1.0.1",
    "pandas>=2.3.0",
    "papermill>=2.6.0",
    "quarto>=0.1.0",
]

[tool.ruff]

lint.per-file-ignores."*doccmd_*.py" = [
   # Allow hardcoded secrets in documentation.
   "S105",
]

[dependency-groups]
dev = [
    "doccmd>=2025.4.8",
    "pre-commit>=4.2.0",
]
